# bluedawn

./: README.md  pyproject.toml
bot/: __main__.py
bot/cogs/: admin.py  anime.py  choice.py  eightball.py  fortune.py  hello.py  identity.py  source.py  whois.py
bot/cogs/resources/: adjectives.csv  adjectives.yaml  nouns.csv  nouns.yaml
bot/cogs/util/: checks.py  selfinfo.py  whois.py
